Fixed brand name on small screen

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ header {
   color: var(--secondary-color);
   display: flex;
   align-items: center;
+  white-space: nowrap;
   gap: 0.75rem; /* Space between image and text */
 }
 
